incorporating the image resizer onto the projects page

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -16,7 +16,10 @@
     ride from California to the very bottom of South America. I left my job in order to properly
     accomplish this one.
   </p>
-  <img loading="lazy" src="https://advrider.com/f/attachments/p_20240726_144422-jpg.6156665/" />
+  <img
+      loading="lazy"
+      src="https://advrider.com/f/attachments/p_20240726_144422-jpg.6156665/"
+      alt="a side shot of a 1994 KLR650 in a driveway fully loaded with 3 metal panniers, ready to be taken on an adventure"/>
 </mat-card>
 
 <!-- 
@@ -46,7 +49,7 @@
     else. A few key experiences made me have second thoughts on that impression, and when I was offered
     a spot at a camp I took it and went to see what the hype was about.
   </p>
-  <img loading="lazy" imgurId="CL5Ra65" />
+  <img loading="lazy" imgurId="CL5Ra65" alt="a large burning wooden statue known as 'The Man' at Burning Man festival"/>
 </mat-card>
 
 <mat-card routerLink="/shasta">
@@ -58,7 +61,10 @@
     I solo climbed Mt. Shasta over 2 days, ascending the Avalanche Gulch route and taking my snowboarding gear with me
     to backcountry ride back down after reaching the summit.
   </p>
-  <img loading="lazy" imgurId="z6m5jsM" />
+  <img
+      loading="lazy"
+      imgurId="z6m5jsM"
+      alt="Blake Williams victoriously standing at the summit of Mount Shasta holding a paper sign showing the date"/>
 </mat-card>
 
   <mat-card routerLink="/mauritania-trip">
@@ -70,7 +76,10 @@
       In the early spring of 2023 I solo traveled to Mauritania, west Africa to hike through a portion
       of the Sahara desert over 6 and a half days, and hop the worlds longest freight train.
     </p>
-    <img loading="lazy" imgurId="VGU6TyD" />
+    <img
+        loading="lazy"
+        imgurId="VGU6TyD"
+        alt="Two camel drivers leading two camels towards the horizon on foot across undulating sand dunes in the sahara desert"/>
   </mat-card>
 
 <a href="https://www.advrider.com/f/threads/san-francisco-to-tuktoyaktuk-2022.1559749/" target="_blank" class="no-underline">
@@ -85,7 +94,10 @@
       the Yukon, then rode the Dempster Highway to the town of Tuktoyaktuk, Northwest Territories of Canada to see the
       Arctic Ocean.
     </p>
-    <img loading="lazy" src="https://www.advrider.com/f/attachments/pxl_20220711_173545624-2-jpg.3962085/">
+    <img
+        loading="lazy"
+        src="https://www.advrider.com/f/attachments/pxl_20220711_173545624-2-jpg.3962085/"
+        alt="Blake Williams sitting on top of his motorcycle next to the Arctic Circle landmark sign">
   </mat-card>
 </a>
 
@@ -100,7 +112,10 @@
       Salt Lake City Utah. This covered ~700 miles of dirt road and many stops along the way at historic
       stations used by the original Pony Express business.
     </p>
-    <img loading="lazy" src="https://www.advrider.com/f/attachments/pxl_20210824_010223547-jpg.3153121/">
+    <img
+        loading="lazy"
+        src="https://www.advrider.com/f/attachments/pxl_20210824_010223547-jpg.3153121/"
+        alt="A 2005 KLR650 motorcycle on a sandy desert trail in the Utah backcountry">
   </mat-card>
 </a>
 </div>
