--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -14,7 +14,7 @@
   <p>
     A nice an concise set of CSS injections I add to specific websites for better browsing experience.
   </p>
-  <img loading="lazy" src="https://imgur.com/TInQo0o.jpg" />
+  <img loading="lazy" imgurId="TInQo0o" alt="hackerman meme"/>
 </mat-card>
 
 <a href="https://imgur.com/a/BrJ20zV" target="_blank" class="no-underline">
@@ -28,7 +28,7 @@
       I was able to snag a few of them and recreate the wall in a miniature version! It even uses
       a depth camera to show your silhouette in real time as you move in front of it like the original.
     </p>
-    <img loading="lazy" src="https://imgur.com/wFl4yZp.jpg" />
+    <img loading="lazy" imgurId="wFl4yZp" alt="A flipdot panel with the text 'hack the planet' written in white flip dots"/>
   </mat-card>
 </a>
 
@@ -42,7 +42,7 @@
     I found some art online that inspired me to try out making faux neon signs out of led strips
     tucked inside of diffuser tubing. The end result speaks for itself!
   </p>
-  <img loading="lazy" src="https://imgur.com/7oWPc71.jpg" />
+  <img loading="lazy" imgurId="7oWPc71" />
 </mat-card>
 </a>
 
@@ -58,7 +58,10 @@
       from avionics equipment an the good ol' BMP280 barometer to make an altimeter with.<br>
       Finding even 4 of these displays <i>anywhere</i> online literally took months of scouring.
     </p>
-    <img loading="lazy" src="https://www.industrialalchemy.org/media2/store/store1/alphaminitron1.jpg"/>
+    <img
+        loading="lazy"
+        src="https://www.industrialalchemy.org/media2/store/store1/alphaminitron1.jpg"
+        alt="closeup of a 16 segment minitron display with all tungsten filament segments brightly lit up"/>
   </mat-card>
 </a>
 
@@ -71,7 +74,7 @@
     The QR code goes to qrtatt.ooo, and can do some very fancy stuff! Click the link in the upper
     right to go to the full page I dedicated to talking about the tattoo.
   </p>
-  <img loading="lazy" src="https://imgur.com/iFGwWLA.jpg" />
+  <img loading="lazy" imgurId="iFGwWLA" alt="a forearm prominently displaying a tattoo of a black QR code"/>
 </mat-card>
 
 <a href="https://imgur.com/a/L7AnwLG" target="_blank" class="no-underline">
@@ -91,7 +94,7 @@
       too much parasitic capacitance or other interference when nestled in the digital watch case.
       I'll need to figure this out to solve it and call it done.
     </p>
-    <img loading="lazy" src="https://imgur.com/WboU1Qg.jpg" />
+    <img loading="lazy" imgurId="WboU1Qg" alt="a casio digital watch opened up to show custom hardware added around the stock clock element"/>
   </mat-card>
 </a>
 
@@ -108,7 +111,7 @@
       This was a major project where I learned about good battery design, some machining skills, and a
       lot of patience.
     </p>
-    <img loading="lazy" src="https://imgur.com/MCgCxjL.jpg" />
+    <img loading="lazy" imgurId="MCgCxjL" alt="a mountainboard sitting in dirt pointed downhill towards a large dirt ramp"/>
   </mat-card>
 </a>
 
@@ -128,7 +131,7 @@
       based on <a href="http://www.datasheetspdf.com/pdf-down/H/D/S/HDSP2000_Hewlett-Packard.pdf" target="_blank">these xerox scans</a>
       of old datasheets from the 1970's.
     </p>
-    <img loading="lazy" src="https://imgur.com/qUIIJmQ.jpg" />
+    <img loading="lazy" imgurId="qUIIJmQ" alt="a dot matrix display plugged into a prototyping breadboard, illuminating the characters '0123'"/>
   </mat-card>
 </a>
 
@@ -148,7 +151,7 @@
       transistor. As this was my first 'major' hardware project, I didn't want to deal with extra IC
       components like a serial to parallel shift register to complicate it any more.
     </p>
-    <img loading="lazy" src="https://imgur.com/dHJe2YO.jpg" />
+    <img loading="lazy" imgurId="dHJe2YO" alt="a wrist prominently displaying a custom watch made with four nixie tubes lit up showing the current time"/>
   </mat-card>
 </a>
 </div>
