--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -14,7 +14,7 @@
   <p>
     A nice an concise set of CSS injections I add to specific websites for better browsing experience.
   </p>
-  <img loading="lazy" imgurId="TInQo0o" alt="hackerman meme"/>
+  <img loading="lazy" imgurId="GVJ06OK" alt="hackerman meme"/>
 </mat-card>
 
 <a href="https://imgur.com/a/BrJ20zV" target="_blank" class="no-underline">
