--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -8,7 +8,7 @@
 <div class="page-container">
   <mat-card>
     <h1>About the QR Tattoo</h1>
-    <img src="https://i.imgur.com/r9Nmh7d.jpg">
+    <img imgurId="r9Nmh7d">
       <span>
 			 This is a tattoo of a QR code that links to qrtatt.ooo. I 'own' this domain, and have it
         pointed at a reserved landing page on my personal website - blakewilliams.org - which is
