Removing unused files

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -17,7 +17,6 @@
     accomplish this one.
   </p>
   <img
-      loading="lazy"
       src="https://advrider.com/f/attachments/p_20240726_144422-jpg.6156665/"
       alt="a side shot of a 1994 KLR650 in a driveway fully loaded with 3 metal panniers, ready to be taken on an adventure"/>
 </mat-card>
@@ -58,8 +57,8 @@
     <mat-card-subtitle>Searching for Telos (not really)</mat-card-subtitle>
   </mat-card-header>
   <p>
-    I solo climbed Mt. Shasta over 2 days, ascending the Avalanche Gulch route and taking my snowboarding gear with me
-    to backcountry ride back down after reaching the summit.
+    I solo climbed Mt. Shasta over 2 days, ascending the Avalanche Gulch route, and took my snowboarding gear with me
+    to back-country snowboard down after reaching the summit.
   </p>
   <img
       loading="lazy"
@@ -73,8 +72,8 @@
       <mat-card-subtitle>no, we didn't ride the camels</mat-card-subtitle>
     </mat-card-header>
     <p>
-      In the early spring of 2023 I solo traveled to Mauritania, west Africa to hike through a portion
-      of the Sahara desert over 6 and a half days, and hop the worlds longest freight train.
+      In the early spring of 2023 I solo traveled to Mauritania, west Africa for 2 weeks to hike through a portion
+      of the Sahara desert and freight-hop the worlds longest freight train.
     </p>
     <img
         loading="lazy"
