Misc small typo fixes

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -9,11 +9,12 @@
 <mat-card routerLink="/road-to-ushuaia">
   <mat-card-header>
     <mat-card-title>Motorcycle ride from California to bottom of Argentina</mat-card-title>
-    <mat-card-subtitle>hablas español?</mat-card-subtitle>
+    <mat-card-subtitle>Hablas español?</mat-card-subtitle>
   </mat-card-header>
   <p>
     I'm riding my motorcycle on the largest expedition I've ever done; a one year
-    ride from California to the very bottom of South America. I left my job in order to properly
+    ride from California to the very bottom of South America. I spend several years learning spanish solo
+    and in immersion programs in Central America, as well as left my job in order to properly
     accomplish this one.
   </p>
   <img
@@ -69,7 +70,7 @@
   <mat-card routerLink="/mauritania-trip">
     <mat-card-header>
       <mat-card-title>Hiking the Sahara Desert</mat-card-title>
-      <mat-card-subtitle>no, we didn't ride the camels</mat-card-subtitle>
+      <mat-card-subtitle>No, we didn't ride the camels</mat-card-subtitle>
     </mat-card-header>
     <p>
       In the early spring of 2023 I solo traveled to Mauritania, west Africa for 2 weeks to hike through a portion
@@ -104,7 +105,7 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>Motorcycle ride along the Pony Express</mat-card-title>
-      <mat-card-subtitle>giddy up</mat-card-subtitle>
+      <mat-card-subtitle>Giddy up!</mat-card-subtitle>
     </mat-card-header>
     <p>
       I rode my motorcycle long the original overland trail that is the Pony Express, from Sacramento to
