Adding half dome travel story

--- a/src/app/travels/travels_page.html
+++ b/src/app/travels/travels_page.html
@@ -67,20 +67,20 @@
       alt="Blake Williams victoriously standing at the summit of Mount Shasta holding a paper sign showing the date"/>
 </mat-card>
 
-  <mat-card routerLink="/mauritania-trip">
-    <mat-card-header>
-      <mat-card-title>Hiking the Sahara Desert</mat-card-title>
-      <mat-card-subtitle>No, we didn't ride the camels</mat-card-subtitle>
-    </mat-card-header>
-    <p>
-      In the early spring of 2023 I solo traveled to Mauritania, west Africa for 2 weeks to hike through a portion
-      of the Sahara desert and freight-hop the worlds longest freight train.
-    </p>
-    <img
-        loading="lazy"
-        imgurId="VGU6TyD"
-        alt="Two camel drivers leading two camels towards the horizon on foot across undulating sand dunes in the sahara desert"/>
-  </mat-card>
+<mat-card routerLink="/mauritania-trip">
+  <mat-card-header>
+    <mat-card-title>Hiking the Sahara Desert</mat-card-title>
+    <mat-card-subtitle>No, we didn't ride the camels</mat-card-subtitle>
+  </mat-card-header>
+  <p>
+    In the early spring of 2023 I solo traveled to Mauritania, west Africa for 2 weeks to hike through a portion
+    of the Sahara desert and freight-hop the worlds longest freight train.
+  </p>
+  <img
+      loading="lazy"
+      imgurId="VGU6TyD"
+      alt="Two camel drivers leading two camels towards the horizon on foot across undulating sand dunes in the sahara desert"/>
+</mat-card>
 
 <a href="https://www.advrider.com/f/threads/san-francisco-to-tuktoyaktuk-2022.1559749/" target="_blank" class="no-underline">
   <mat-card>
@@ -100,6 +100,22 @@
         alt="Blake Williams sitting on top of his motorcycle next to the Arctic Circle landmark sign">
   </mat-card>
 </a>
+
+<mat-card routerLink="/half-dome">
+  <mat-card-header>
+    <mat-card-title>Hiking Half Dome</mat-card-title>
+    <mat-card-subtitle>Playing the permit lottery</mat-card-subtitle>
+  </mat-card-header>
+  <p>
+    After several years of playing the permit lottery, I finally found luck in daily lotteries and had the chance to
+    summit Half Dome. I got the email for a permit valid for the next morning so after work I packed my car, drove out
+    to Yosemite in the evening, slept in my car the best I could, then started the hike about an hour before sunrise.
+  </p>
+  <img
+      loading="lazy"
+      imgurId="IXVejMH"
+      alt="Half dome mountain from the perspective of sub dome"/>
+</mat-card>
 
 <a href="https://www.advrider.com/f/threads/san-jose-california-park-city-utah-via-pony-express.1495742/" target="_blank" class="no-underline">
   <mat-card>
