misc small config fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,7 +40,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 // Any link that is visited, 'a' tag or otherwise, not within the header nav.
 *:visited:not(nav *) {
-  color: #4dd0e1;
+  color: white;
 }
 
 *:link:not(nav *) {
