--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -12,7 +12,7 @@
     <mat-card-subtitle>The internet how it should be</mat-card-subtitle>
   </mat-card-header>
   <p>
-    A nice an concise set of CSS injections I add to specific websites for better browsing experience.
+    A nice and concise set of CSS injections I add to specific websites for better browsing experience.
   </p>
   <img loading="lazy" imgurId="GVJ06OK" alt="hackerman meme"/>
 </mat-card>
