Upgrading to Angular 17.1
Also adding Server Side Rendering to help fix Google Search Console indexing issues

--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -1,10 +1,3 @@
-<nav mat-tab-nav-bar>
-  <a mat-tab-link routerLink="/">Home</a>
-  <a mat-tab-link routerLink="/travels">Travels</a>
-  <a mat-tab-link routerLink="/projects">Projects</a>
-  <a mat-tab-link routerLink="/career">Career</a>
-</nav>
-
 <mat-card>
   <h1 style="text-align: center">Mauritania, April 2023</h1>
   <div class="divider"></div>
@@ -18,18 +11,16 @@
     you read this, keep in mind that this was done with the following circumstances:
   </p>
   <ol>
-    <li>I was traveling alone (hard to convince others to join) in a country <a href="wikipedia.org/wiki/Slavery_in_Mauritania">where slavery is still common</a></li>
-    <li>I did not have a working cell phone (issues buying SIM card in airport and no options after that)</li>
+    <li>I was traveling alone (hard to convince others to join)</li>
+    <li>I did not have a working cell phone (issues buying SIM card in airport and not great options after that)</li>
     <li>I did not have working credit or debit cards (<b>seriously fuck you Chase bank</b>, your "automated security
-      system", and your phone agents blowing me off when I try to warn about my upcoming travels) if I didn't bring cash
-      just in case, I would have been completely fucked.
-    </li>
+      system", and your phone agents blowing me off when I try to warn about my upcoming travels)</li>
   </ol>
 
   <p>
     I'd like to thank Namoud from Camping Inimi in Atar for helping coordinate a portion of this trip. If you're
     interested a trip like this you can contact him on <a href="https://wa.me/22222292023" target="_blank">Whatsapp</a>
-    or at <a href="mailto:trekkingsahara@gmail.com">trekkingsahara@gmail.com</a>.
+    or at <a href="mailto:trekkingsahara@gmail.com">trekkingsahara&#64;gmail.com</a>.
   </p>
   <div class="divider"></div>
   <h2>Day 1</h2>
