--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <nav mat-tab-nav-bar [tabPanel]="tabPanel">
-  <a mat-tab-link [style.opacity]="1" routerLink="/" #homeTab>Home</a>
+  <a mat-tab-link routerLink="/" #homeTab>Home</a>
   <a mat-tab-link routerLink="/travels" #travelsTab>Travels</a>
   <a mat-tab-link routerLink="/projects" #projectsTab>Projects</a>
   <a mat-tab-link routerLink="/career" #careerTab>Career</a>
 </nav>
 
-<mat-tab-nav-panel #tabPanel>
-  <router-outlet />
-</mat-tab-nav-panel>
+<router-outlet />
+<mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
