--- a/src/app/projects/projects_page.scss
+++ b/src/app/projects/projects_page.scss
@@ -19,6 +19,7 @@ mat-card {
   text-decoration: none;
 }
 
+/* Without this, the images will be however large they were downloaded to be and stretch the mat-cards to the right. */
 img {
   min-height: 130px;
   width: 100%;
