--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -11,8 +11,9 @@
     you read this, keep in mind that this was done with the following circumstances:
   </p>
   <ol>
-    <li>I was traveling alone (hard to convince others to join)</li>
-    <li>I did not have a working cell phone (issues buying SIM card in airport and not great options after that)</li>
+    <li>I was traveling alone (hard to convince others to join) in a country
+      <a href="wikipedia.org/wiki/Slavery_in_Mauritania">where slavery is still common.</a></li>
+    <li>I did not have a working cell phone (issues buying SIM card in airport and no options after that)</li>
     <li>I did not have working credit or debit cards (<b>seriously fuck you Chase bank</b>, your "automated security
       system", and your phone agents blowing me off when I try to warn about my upcoming travels)</li>
   </ol>
