Aligning styles on some travels and projects

--- a/src/app/projects/fursuit/fursuit_page.html
+++ b/src/app/projects/fursuit/fursuit_page.html
@@ -1,13 +1,14 @@
 <mat-card>
-  
-  <h1 style="text-align: center">What it takes to make a fursuit</h1>
-  <div class="divider"></div>
+  <mat-card-header>
+    <h1>What it takes to make a fursuit</h1>
+  </mat-card-header>
+    
+  <mat-card-content>
+  <h2>Forward</h2>
   <p>How hard could it be? Well, the answer really depends on whether or not you hit burnout, and how hard it hits you.</p>
 
   <p>It'll make more sense to explain the process categorically by individual pieces rather than chronologically.
   Feel free to scroll down or click to specific sections of interest.</p>
-
-  <div class="divider"></div>
 
   <h2>Table of Contents</h2>
   <ol>
@@ -215,4 +216,5 @@
   
   <img loading="lazy" imgurId="lHuqm7u" />
   <img loading="lazy" imgurId="gJjDskN" />
+  </mat-card-content>
 </mat-card>
