--- a/src/app/qr/aboutqr/about_qr_page.html
+++ b/src/app/qr/aboutqr/about_qr_page.html
@@ -1,6 +1,11 @@
 <div class="page-container">
   <mat-card>
+  <mat-card-header>
     <h1>About the QR Tattoo</h1>
+  </mat-card-header>
+  <div class="divider"></div>
+    
+  <mat-card-content>
     <img imgurId="r9Nmh7d">
       <span>
 			 This is a tattoo of a QR code that links to qrtatt.ooo. I 'own' this domain, and have it
@@ -94,5 +99,6 @@
 					</div>
         </li>
       </ul>
+      </mat-card-content>
     </mat-card>
 </div>
