--- a/src/app/travels/burning_man_2023/burning_man_2023_page.html
+++ b/src/app/travels/burning_man_2023/burning_man_2023_page.html
@@ -1,7 +1,10 @@
 <mat-card>
-  <h1 style="text-align: center">Burning Man, 2023</h1>
-  <div class="divider"></div>
+  <mat-card-header>
+    <h1>Burning Man, 2023</h1>
+  </mat-card-header>
 
+  <mat-card-content>
+  <h2>Forward</h2>
   <p>
     For a while I'd been hesitant about filling this out; on one hand I want to share an experience I had that might
     resonate with others, but on the other hand it feels like this goes against the
@@ -274,5 +277,5 @@
   <iframe loading="lazy" class="youtube-player" src="https://www.youtube.com/embed/uQ_kAJ2N1Lw" frameborder="0"
   allow="accelerometer; clipboard-write; encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 
-  
+</mat-card-content>
 </mat-card>
