--- a/src/app/travels/half_dome_2022/half_dome_hike_page.html
+++ b/src/app/travels/half_dome_2022/half_dome_hike_page.html
@@ -1,7 +1,10 @@
 <mat-card>
-  <h1 style="text-align: center">Half Dome, September 2022</h1>
-  <div class="divider"></div>
+  <mat-card-header>
+  <h1>Half Dome, September 2022</h1>
+  </mat-card-header>
 
+  <div class="divider"></div>
+  <mat-card-content>
   <p>
     For several years I had wanted to do the 16 mile out-and-back trail to the top of Half Dome, the most
     iconic mountain in Yosemite. I'd applied to the preseason lotteries for multiple times over the years without
@@ -95,4 +98,5 @@
     excited for a proper bed. 
   </p>
 
+  </mat-card-content>
 </mat-card>
