--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -1,8 +1,12 @@
 <mat-card>
-  <h1 style="text-align: center">Mauritania, April 2023</h1>
+  <mat-card-header>
+    <h1 style="text-align: center">Mauritania, April 2023</h1>
   <div class="divider"></div>
-  <h2>Forward</h2>
+  </mat-card-header>
 
+  <mat-card-content>
+  <h2>Forward</h2>
+  <div class="divider"></div>
   <p>
     About a year and a half before this trip happened, I'd seen
     <a href="https://www.youtube.com/watch?v=JRuIUhK1vcc" target="_blank">a video</a> of people hopping the world's longest train -a
@@ -551,4 +555,5 @@
     <li>Some familiar energy bars</li>
 
   </ul>
+  </mat-card-content>
 </mat-card>
