--- a/src/app/travels/shasta/shasta_page.html
+++ b/src/app/travels/shasta/shasta_page.html
@@ -1,7 +1,11 @@
 <mat-card>
-  <h1 style="text-align: center">Mt Shasta, June 2023</h1>
+  <mat-card-header>
+  <h1>Mt Shasta, June 2023</h1>
   <div class="divider"></div>
-  <h2>Foreward</h2>
+  </mat-card-header>
+
+  <mat-card-content>
+  <h2>Forward</h2>
   <p>
     I've had the idea of climbing Mount Shasta and snowboarding back down for about 2 and a half years when I saw
     the mountaineering route topographic maps in the bathroom of
@@ -102,4 +106,5 @@
 
   Overall it was a phenominal and exhausting time, 10/10.
   </p>
+  </mat-card-content>
 </mat-card>
