--- a/src/app/projects/cssinjection/css_injection_page.html
+++ b/src/app/projects/cssinjection/css_injection_page.html
@@ -1,7 +1,10 @@
 <mat-card>
-  <h1 style="text-align: center">CSS Injection</h1>
+  <mat-card-header>
+    <h1>CSS Injection</h1>
+  </mat-card-header>
   <div class="divider"></div>
 
+  <mat-card-content>
   <p class="disclaimer">DISCLAIMER: I do not own the chrome extension, know it's developer, or
     have been paid to endorse it. My thoughts are my own.</p>
   <p>
@@ -21,34 +24,34 @@
     favorite custom CSS rules I've created for myself to make browsing certain websites more enjoyable. 
   </p>
 
-  <h1>Youtube.com</h1>
+  <h2>Youtube.com</h2>
   <p>I really don't like Youtube Shorts, and the site force-feeds you them constantly. There is no way to
-    disable Shorts as <a href="https://blog.logrocket.com/product-management/why-youtube-created-shorts/">the
+    disable Shorts as <a href="https://blog.logrocket.com/product-management/why-youtube-created-shorts/" target="_blank">the
     company seems pressured to compete with Tiktok.</a> I don't think it encourages healthy, intentional, or mindful viewing
     and it feels more like brainrot when you viewing Shorts, as if the Tiktok content model is something to
     aspire to copy. These injections will hide them from your view.</p>
     <pre class="code-container"><code [innerHTML]="youtubeCss"></code></pre>
 
 
-  <h1>Twitter.com</h1>
+  <h2>Twitter.com</h2>
   <p>I don't want to see what the people I follow like and retweet. I want to see <i>their</i> content!!
     Most of the retweets and likes from other people I see tend to be political, hot takes, or tiktok
     reposts. I don't miss this spam for the most part.</p>
     <pre class="code-container"><code [innerHTML]="twitterCss"></code></pre>
 
-  <h1>Pornhub.com</h1>
+  <h2>Pornhub.com</h2>
   <p>I'm not a fan of 'step fantasy' porn, where the actors pretend to be related. I really don't get
     this taboo appeal, but it's all over the platform. Sure you can set a Taste Profile if you have
     even a free account, but this only blocks categorical content on the My Recommendations page.
     Taste Profile doesn't apply when using the site in any other way than that.</p>
     <pre class="code-container"><code [innerHTML]="pornhubCss"></code></pre>
 
-  <h1>Spanishdict.com</h1>
+  <h2>Spanishdict.com</h2>
   <p>This is a great website for viewing verb conjugations if you're learning spanish. This removes a modal
     that blocks the screen on page load</p>
     <pre class="code-container"><code [innerHTML]="spanishDictCss"></code></pre>
 
-  <h1>Shortcomings</h1>
+  <h2>Shortcomings</h2>
   <p>This (and any CSS injector) is not without it's shortcomings. There are some things that it
     can struggle with such as:</p>
   <ul>
@@ -70,4 +73,5 @@
       will significantly help with this once it lands (assuming it's reasonably performant).
     </li>
   </ul>
+  </mat-card-content>
 </mat-card>
