--- a/src/app/projects/fursuit/fursuit_page.scss
+++ b/src/app/projects/fursuit/fursuit_page.scss
@@ -6,9 +6,13 @@ img {
 
 .divider {
   border-top: 1px solid white;
-  margin-bottom: 1em;
+  margin: 0 -16px 1em -16px;
 }
 
 mat-card {
   margin: 20px 5%;
+}
+
+h1 {
+  margin-top: 0;
 }
