Adding dedicate page for neon sign project

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -29,21 +29,19 @@
   </mat-card>
 </a>
 
-<a href="https://imgur.com/a/dxwt7oJ" target="_blank" class="no-underline">
-<mat-card>
+<mat-card routerLink="/neon-sign">
   <mat-card-header>
     <mat-card-title>Faux Neon Sign Art</mat-card-title>
     <mat-card-subtitle>neon signs without glass blowing</mat-card-subtitle>
   </mat-card-header>
-    <mat-card-content>
-      <p>
-        I found some art online that inspired me to try out making faux neon signs out of led strips
-        tucked inside of diffuser tubing. The end result speaks for itself!
-      </p>
-      <img loading="lazy" imgurId="7oWPc71" />
-    </mat-card-content>
-  </mat-card>
-</a>
+  <mat-card-content>
+    <p>
+      I found some art online that inspired me to try out making faux neon signs out of led strips
+      tucked inside of diffuser tubing. The end result speaks for itself!
+    </p>
+    <img loading="lazy" imgurId="7oWPc71" />
+  </mat-card-content>
+</mat-card>
 
 <a href="https://imgur.com/a/gBYLfQS" target="_blank" class="no-underline">
   <mat-card>
