Adding dedicated page for mountainboard project

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -101,24 +101,22 @@
   </mat-card>
 </a>
 
-<a href="https://imgur.com/a/YKbkF02" target="_blank" class="no-underline">
-  <mat-card>
-    <mat-card-header>
-      <mat-card-title>Electric Mountainboard</mat-card-title>
-      <mat-card-subtitle>very stoked</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        A road bike is to a mountain bike, as a skateboard is to a mountainboard. Their height of popularity
-        was in the early 2000's along with the X-games. Some compare it to the sensation of snowboarding,
-        but like most analogies it's a little bit of a stretch.<br>
-        This was a major project where I learned about good battery design, some machining skills, and a
-        lot of patience.
-      </p>
-      <img loading="lazy" imgurId="MCgCxjL" alt="a mountainboard sitting in dirt pointed downhill towards a large dirt ramp"/>
-    </mat-card-content>
-  </mat-card>
-</a>
+<mat-card routerLink="/mountainboard">
+  <mat-card-header>
+    <mat-card-title>Electric Mountainboard</mat-card-title>
+    <mat-card-subtitle>very stoked</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      A road bike is to a mountain bike, as a skateboard is to a mountainboard. Their height of popularity
+      was in the early 2000's along with the X-games. Some compare it to the sensation of snowboarding,
+      but like most analogies it's a little bit of a stretch.<br>
+      This was a major project where I learned about good battery design, some machining skills, and a
+      lot of patience.
+    </p>
+    <img loading="lazy" imgurId="MCgCxjL" alt="a mountainboard sitting in dirt pointed downhill towards a large dirt ramp"/>
+  </mat-card-content>
+</mat-card>
 
 <a href="https://imgur.com/a/Kc7NzhB" target="_blank" class="no-underline">
   <mat-card>
