Adding dedicated page for nixie tube project

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -140,8 +140,7 @@
   </mat-card>
 </a>
 
-<a href="https://imgur.com/a/sMkJgo1" target="_blank" class="no-underline">
-  <mat-card>
+  <mat-card routerLink="/nixie-watch">
     <mat-card-header>
       <mat-card-title>Nixie Tube Wrist Watch</mat-card-title>
       <mat-card-subtitle>Check the divergence!</mat-card-subtitle>
@@ -160,5 +159,4 @@
       <img loading="lazy" imgurId="dHJe2YO" alt="a wrist prominently displaying a custom watch made with four nixie tubes lit up showing the current time"/>
     </mat-card-content>
   </mat-card>
-</a>
 </div>
