Adding dedicate page for flip dot display
also updating sitemap

--- a/src/app/projects/nixiewatch/nixie_watch_page.html
+++ b/src/app/projects/nixiewatch/nixie_watch_page.html
@@ -14,7 +14,7 @@
     <p>
       Despite never having done hardware engineering beyond Arduino and other simple microcontroller project up till
       this point, I decided to try something similar, but with nixie tubes. Unlike minitron filament displays, nixie
-      tubes are filled with neon gas and function idential to a neon display, but shrunk down to a much smaller scale.
+      tubes are filled with neon gas and function identical to a neon display, but shrunk down to a much smaller scale.
       There were many challenges and new things I learned along the way; this was my first time ever using any CAD
       software for routing PCBs.
     </p>
