--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -12,8 +12,7 @@
   </mat-card-content>
 </mat-card>
 
-<a href="https://imgur.com/a/BrJ20zV" target="_blank" class="no-underline">
-  <mat-card>
+  <mat-card routerLink="/flip-dot-display">
     <mat-card-header>
       <mat-card-title>Flip Dot Wall Project</mat-card-title>
       <mat-card-subtitle>Like old-school train displays, but better</mat-card-subtitle>
@@ -27,7 +26,6 @@
       <img loading="lazy" imgurId="wFl4yZp" alt="A flipdot panel with the text 'hack the planet' written in white flip dots"/>
     </mat-card-content>
   </mat-card>
-</a>
 
 <mat-card routerLink="/neon-sign">
   <mat-card-header>
