small typo fixes

--- a/src/app/projects/flipdotdisplay/flip_dot_display.html
+++ b/src/app/projects/flipdotdisplay/flip_dot_display.html
@@ -26,7 +26,7 @@
     </p>
 
     <p>
-      I felt the first step was to make a chasis to hold together the panels, so I bought some aluminum L-bracket from
+      I felt the first step was to make a chassis to hold together the panels, so I bought some aluminum L-bracket from
       Home Depot and salvaged some aluminum T-slot rail from the recycle bins at work. Here's a progress shot of the
       backing frame coming together. The T-slot rails are being cut down to size and joined together
     </p>
@@ -39,7 +39,7 @@
     <img loading="lazy" imgurId="7IVaHO5"/>
 
     <p>
-      Originally the display drive code was prototyped on an Arduino Uno. The mess of wires and a Raspberry Pi in the
+      Originally the display driver code was prototyped on an Arduino Uno. The mess of wires and a Raspberry Pi in the
       next photo was what I finally got working. I decided to go with a Raspberry Pi because there were convenient
       libraries for using cheap Intel RealSense depth cameras. The Raspberry Pi output is sent to a logic level
       shifter to convert from 3v to 5v, then finally that signal goes to a RS485 converter which the displays require.
