Adding dedicated page to the tap to pay watch

--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -76,8 +76,7 @@
   </mat-card-content>
 </mat-card>
 
-<a href="https://imgur.com/a/L7AnwLG" target="_blank" class="no-underline">
-  <mat-card>
+  <mat-card routerLink="/smart-pay-watch">
     <mat-card-header>
       <mat-card-title>Smart Pay Casio Watch</mat-card-title>
       <mat-card-subtitle>[hiatus]</mat-card-subtitle>
@@ -97,7 +96,6 @@
       <img loading="lazy" imgurId="WboU1Qg" alt="a casio digital watch opened up to show custom hardware added around the stock clock element"/>
     </mat-card-content>
   </mat-card>
-</a>
 
 <mat-card routerLink="/mountainboard">
   <mat-card-header>
