--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -10,15 +10,9 @@
   </span>
 </div>
 
-<div class="language-skill-container">
-  <p>Language Skills</p>
-  <div class="language-skill" *ngFor="let skill of languageSkills">
-      <div class="skill-label-container">
-        <span>{{skill.label}}</span>
-        <span>{{getSkillDescriptor(skill.percent)}}</span>
-      </div>
-      <div class="progress-bar">
-        <span class="progress-bar-fill red-yellow-gradient" [style.width.%]="skill.percent"></span>
-      </div>
+<div id="actionContainer" #actionContainer>
+  <div>Right now I am:</div>
+  <div id="actions" #actions>
+    <div *ngFor="let row of currentActivities">{{row}}</div>
   </div>
 </div>
