--- a/src/app/homepage/home_page.scss
+++ b/src/app/homepage/home_page.scss
@@ -20,28 +20,22 @@
     }
 }
 
-.language-skill-container {
-    margin: 0 20%
-}
-
-.language-skill {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-
-    .skill-label-container {
-    justify-content: space-between;
-    display: flex;
-    flex-direction: row;
-    }
-}
-
-.progress-bar {
-    width: 100%;
-    background-color: gray;
-}
-
-.progress-bar-fill {
-    display: block;
-    height: 5px;    
+#actionContainer {
+	margin: 0 auto;
+	text-align: center;
+	width: fit-content;
+	
+	span {
+		white-space: nowrap;
+	}
+	
+	#actions {
+		overflow: hidden;
+		width: fit-content;
+			
+		> div {
+			height: fit-content;
+			transition: transform 0.6s ease, opacity 0.6s ease;
+		}
+	}
 }
