--- a/src/app/projects/projects_page.html
+++ b/src/app/projects/projects_page.html
@@ -114,8 +114,7 @@
   </mat-card-content>
 </mat-card>
 
-<a href="https://imgur.com/a/Kc7NzhB" target="_blank" class="no-underline">
-  <mat-card>
+  <mat-card routerLink="/dot-matrix-watch">
     <mat-card-header>
       <mat-card-title>Dot Matrix Watch</mat-card-title>
       <mat-card-subtitle>[hiatus]</mat-card-subtitle>
@@ -134,7 +133,6 @@
       <img loading="lazy" imgurId="qUIIJmQ" alt="a dot matrix display plugged into a prototyping breadboard, illuminating the characters '0123'"/>
     </mat-card-content>
   </mat-card>
-</a>
 
   <mat-card routerLink="/nixie-watch">
     <mat-card-header>
