--- a/src/app/travels/road_to_ushuaia/road_to_ushuaia_page.html
+++ b/src/app/travels/road_to_ushuaia/road_to_ushuaia_page.html
@@ -1,11 +1,11 @@
 <mat-card>
-  <h1 style="text-align: center">The Road to Ushuaia</h1>
+  <mat-card-header>
+    <h1 style="text-align: center">The Road to Ushuaia</h1>
+  </mat-card-header>
   <div class="divider"></div>
 
-  <p>
-    Redirecting to my thread on Advrider.com...
-  </p>
-  <p>
-    If you'd like to reach me direct, text me on Whatsapp!
-  </p>
+  <mat-card-content>
+    <p>Redirecting to my thread on Advrider.com...</p>
+    <p>If you'd like to reach me direct, text me on Whatsapp!</p>
+  </mat-card-content>
 </mat-card>
