--- a/src/app/projects/nixiewatch/nixie_watch_page.scss
+++ b/src/app/projects/nixiewatch/nixie_watch_page.scss
@@ -1,5 +1,12 @@
-mat-card, mat-card-title {
+:host {
+  display: block;
+  margin: auto;
+  width: fit-content;
+}
+
+mat-card {
   margin: 20px 5%;
+  max-width: 1400px;
 }
 
 mat-card-title {
