--- a/src/app/travels/shasta/shasta_page.scss
+++ b/src/app/travels/shasta/shasta_page.scss
@@ -1,3 +1,14 @@
+:host {
+  display: block;
+  margin: auto;
+  width: fit-content;
+}
+
+mat-card {
+  margin: 20px 5%;
+  max-width: 1400px;
+}
+
 img {
   border-radius: 3px;
   margin: 1em 0;
@@ -8,8 +19,4 @@ img {
 .divider {
   border-top: 1px solid white;
   margin: 0 -16px 1em -16px;
-}
-
-mat-card {
-  margin: 20px 5%;
 }
