Improving presentation order of activities on home page
Now it shows all activities once before repeating any of them

--- a/src/app/homepage/home_page.html
+++ b/src/app/homepage/home_page.html
@@ -13,6 +13,6 @@
 <div id="actionContainer" #actionContainer>
   <div>Right now I am:</div>
   <div id="actions" #actions>
-    <div *ngFor="let row of currentActivities">{{row}}</div>
+    <div *ngFor="let row of allCurrentActivities">{{row}}</div>
   </div>
 </div>
