--- a/src/app/travels/mauritania_trip/mauritania_trip_page.html
+++ b/src/app/travels/mauritania_trip/mauritania_trip_page.html
@@ -16,7 +16,7 @@
   </p>
   <ol>
     <li>I was traveling alone (hard to convince others to join) in a country
-      <a href="https://wikipedia.org/wiki/Slavery_in_Mauritania">where slavery is still common.</a></li>
+      <a href="https://wikipedia.org/wiki/Slavery_in_Mauritania" target="_blank">where slavery is still common.</a></li>
     <li>I did not have a working cell phone (issues buying SIM card in airport and no options after that)</li>
     <li>I did not have working credit or debit cards (<b>seriously fuck you Chase bank</b>, your "automated security
       system", and your phone agents blowing me off when I try to warn about my upcoming travels)</li>
