Adding new entry to css injections page

--- a/src/app/projects/cssinjection/css_injection_page.html
+++ b/src/app/projects/cssinjection/css_injection_page.html
@@ -30,14 +30,21 @@
     company seems pressured to compete with Tiktok.</a> I don't think it encourages healthy, intentional, or mindful viewing
     and it feels more like brainrot when you viewing Shorts, as if the Tiktok content model is something to
     aspire to copy. These injections will hide them from your view.</p>
-    <pre class="code-container"><code [innerHTML]="youtubeCss"></code></pre>
+  <pre class="code-container"><code [innerHTML]="youtubeCss"></code></pre>
 
 
   <h2>Twitter.com</h2>
   <p>I don't want to see what the people I follow like and retweet. I want to see <i>their</i> content!!
     Most of the retweets and likes from other people I see tend to be political, hot takes, or tiktok
     reposts. I don't miss this spam for the most part.</p>
-    <pre class="code-container"><code [innerHTML]="twitterCss"></code></pre>
+  <pre class="code-container"><code [innerHTML]="twitterCss"></code></pre>
+
+  <h2>Chatgpt.com</h2>
+  <p>
+    I simply don't want to log in with my Google account, nor create an account. This clears the modals and allows
+    usage of the basic models.
+  </p>
+  <pre class="code-container"><code [innerHTML]="chatgptCss"></code></pre>
 
   <h2>Pornhub.com</h2>
   <p>I'm not a fan of 'step fantasy' porn, where the actors pretend to be related. I really don't get
@@ -49,7 +56,7 @@
   <h2>Spanishdict.com</h2>
   <p>This is a great website for viewing verb conjugations if you're learning spanish. This removes a modal
     that blocks the screen on page load</p>
-    <pre class="code-container"><code [innerHTML]="spanishDictCss"></code></pre>
+  <pre class="code-container"><code [innerHTML]="spanishDictCss"></code></pre>
 
   <h2>Shortcomings</h2>
   <p>This (and any CSS injector) is not without it's shortcomings. There are some things that it
